# gpca

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  latest.rs  visualization.rs
src/: bregy.rs  ds.rs  dynamic.rs  graphics.rs  haca.rs  lib.rs  main.rs  render.rs  space.rs  utils.rs
src/dynamics/: eca.rs  life.rs  local.rs  mod.rs
src/dynamics/implementations/: cyclic.rs  cyclic.wgsl  eca.rs  life.rs  mod.rs
src/haca/: alt.rs  bregy.rs  haca.rs  hyper_graph.rs  local.rs  mod.rs  process.rs
src/haca_systems/: life.rs  mod.rs
src/spaces/: lattice.rs  local.rs  mod.rs
src/spaces/implementations/: basic.rs  grid.rs  mod.rs
src/system/: dynamical_system.rs  mod.rs  utils.rs
src/third/: convolution.wgsl  cyclic.wgsl  fdg_macroquad.rs  mod.rs  wgpu.rs
